# pulse-box-esp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
components/pulse_engine/: CMakeLists.txt
components/pulse_engine/include/: audio.h  canvas.h  effects.h  led_driver.h  led_math.h  mappings.h  renderer.h
components/pulse_engine/src/: audio.c  canvas.c  effects.c  led_math.c  mappings.c  renderer.c
main/: CMakeLists.txt  cmd_protocol.c  cmd_protocol.h  console.c  console.h  esp_led_driver.c  esp_led_driver.h  idf_component.yml  main.c  panel_bus.c  panel_bus.h  protocol.c  protocol.h  tcp_cmd_server.c  tcp_cmd_server.h  wifi_audio.c  wifi_audio.h
tools/: pulse_box_streamer.py
